--- a/res/menu/log_in.xml
+++ b/res/menu/log_in.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/menu_refresh"
+        android:title="Refresh Text"/>
+    <item
+        android:id="@+id/Menu_add"
+        android:title="Add Item"/>
 
 </menu>
