--- a/res/layout/module_select_fragment.xml
+++ b/res/layout/module_select_fragment.xml
@@ -14,15 +14,104 @@
         android:text="@string/moduleSelectionHeader"
         android:textSize="45sp" />
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/ModuleDescription_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/moduleIcon_gravity"
-        android:drawablePadding="5dp"
+        android:background="@drawable/green_gradient"
+        android:drawableLeft="@drawable/module_icon_gravity"
+        android:drawablePadding="15dp"
+        android:drawableRight="@drawable/monotone_arrow_next_right"
         android:gravity="center_vertical"
         android:padding="5dp"
-        android:text="@string/ModuleTextDescription_1"
-        android:background="@drawable/green_gradient" />
+        android:text="@string/ModuleTextDescription_1" /> -->
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/ModuleDetailsLinearLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/Module2Icon_Button"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/green_gradient"
+                    android:contentDescription="test"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/module_icon_gravity" />
+
+                <TextView
+                    android:id="@+id/ModuleDescription_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/red_gradient"
+                    android:drawableRight="@drawable/monotone_arrow_next_right"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
+                    android:text="@string/ModuleTextDescription_2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ModuleDetailsLinearLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/Module3Icon_Button"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/green_gradient"
+                    android:contentDescription="test"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/module_icon_one" />
+
+                <TextView
+                    android:id="@+id/ModuleDescription_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/green_gradient"
+                    android:drawableRight="@drawable/monotone_arrow_next_right"
+                    android:gravity="center_vertical"
+                    android:padding="15dp"
+                    android:text="@string/ModuleTextDescription_2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ModuleDetailsLinearLayout4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/Module4Icon_Button"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/red_gradient"
+                    android:contentDescription="test"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/optics" />
+
+                <TextView
+                    android:id="@+id/ModuleDescription_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@drawable/red_gradient"
+                    android:drawableRight="@drawable/monotone_arrow_next_right"
+                    android:gravity="center_vertical"
+                    android:text="@string/ModuleTextDescription_3" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
