--- a/res/layout-large/activity_main_module_selector.xml
+++ b/res/layout-large/activity_main_module_selector.xml
@@ -2,16 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainModuleSelector" >
 
     <fragment
-        android:name="edu.auburn.akm0012.fl_roughdraft.ModuleSelect_Fragment"
         android:id="@+id/moduleSelectorFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:name="edu.auburn.akm0012.fl_roughdraft.ModuleSelect_Fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/module_select_fragment" />
 
 </FrameLayout>
