--- a/res/layout/module_select_fragment.xml
+++ b/res/layout/module_select_fragment.xml
@@ -3,6 +3,7 @@
     android:id="@+id/OverallModuleSelectLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+   	android:background="@drawable/gray_gradient"
     android:orientation="vertical" >
 
     <TextView
@@ -27,8 +28,9 @@
         android:text="@string/ModuleTextDescription_1" /> -->
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,12 +43,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <ImageView
+                <ImageButton
                     android:id="@+id/Module2Icon_Button"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:background="@drawable/green_gradient"
-                    android:contentDescription="test"
+                    android:background="@android:drawable/btn_default"
+                    android:contentDescription="@string/ImageDescription"
                     android:scaleType="fitXY"
                     android:src="@drawable/module_icon_gravity" />
 
@@ -58,7 +60,7 @@
                     android:drawableRight="@drawable/monotone_arrow_next_right"
                     android:gravity="center_vertical"
                     android:padding="15dp"
-                    android:text="@string/ModuleTextDescription_2" />
+                    android:text="@string/ModuleTextDescription_1" />
             </LinearLayout>
 
             <LinearLayout
@@ -72,7 +74,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:background="@drawable/green_gradient"
-                    android:contentDescription="test"
+                    android:contentDescription="@string/ImageDescription"
                     android:scaleType="fitXY"
                     android:src="@drawable/module_icon_one" />
 
@@ -98,7 +100,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:background="@drawable/red_gradient"
-                    android:contentDescription="test"
+                    android:contentDescription="@string/ImageDescription"
                     android:scaleType="fitXY"
                     android:src="@drawable/optics" />
 
@@ -109,6 +111,7 @@
                     android:background="@drawable/red_gradient"
                     android:drawableRight="@drawable/monotone_arrow_next_right"
                     android:gravity="center_vertical"
+                    android:padding="15dp"
                     android:text="@string/ModuleTextDescription_3" />
             </LinearLayout>
         </LinearLayout>
