--- a/res/layout/side_panel_fragment.xml
+++ b/res/layout/side_panel_fragment.xml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:layout_height="wrap_content">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <ImageButton
+            android:id="@+id/Settings_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_default"
+            android:contentDescription="@string/ImageDescription"
+            android:scaleType="fitXY"
+            android:src="@drawable/utilities_icon" />
+
+        <ImageButton
+            android:id="@+id/Module_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_default"
+            android:contentDescription="@string/ImageDescription"
+            android:scaleType="fitXY"
+            android:src="@drawable/module_icon" />
+    </LinearLayout>
+
+</ScrollView>
