--- a/res/layout-large/activity_main_module_selector.xml
+++ b/res/layout-large/activity_main_module_selector.xml
@@ -5,11 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".MainModuleSelector" >
 
-    <fragment
-        android:id="@+id/moduleSelectorFragment"
-        android:name="edu.auburn.akm0012.fl_roughdraft_fragments.ModuleSelect_Fragment"
+    <FrameLayout
+        android:id="@+id/moduleSelectorFragment_Portrait"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/module_select_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
